--- a/src/app/chatbox/chatbox.component.scss
+++ b/src/app/chatbox/chatbox.component.scss
@@ -1,87 +1,91 @@
 mat-card {
     margin: 0;
-    width: calc(100% - 32px);
-}
-
-quill-editor {
+    padding: 0;
     width: 100%;
-}
+    background-color: rgb(34, 37, 41);  
+    border: none !important;
 
-.pictureWrap {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    width: calc(100% - 2px);
-    border-right: 1px solid #C7C7C7;
-    border-left: 1px solid #C7C7C7;
-    ;
-}
-
-.sendButton {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: calc(100% - 2px);
-    border-right: 1px solid #C7C7C7;
-    ;
-    border-left: 1px solid #C7C7C7;
-    ;
-    border-bottom: 1px solid #C7C7C7;
-    ;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-}
-
-.icon {
-    padding: 11px 13px;
-    cursor: pointer;
-    color: #C7C7C7;
-    &:hover {
-        color: white;
+    quill-editor {
+        width: 100%;
     }
-}
 
-.customUpload {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
-    color: #FFFFFF;
-    cursor: pointer;
-}
+    .pictureWrap {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        width: calc(100% - 2px);
+        border-right: 1px solid #C7C7C7;
+        border-left: 1px solid #C7C7C7;
+        ;
+    }
 
-.preview {
-    width: auto;
-    height: 120px;
-    object-fit: contain;
-    border: 1px solid white;
-    border-radius: 4px;
-    margin-left: 15px;
-}
+    .sendButton {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: calc(100% - 2px);
+        border-right: 1px solid #C7C7C7;
+        border-left: 1px solid #C7C7C7;
+        border-bottom: 1px solid #C7C7C7;
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
+    }
 
-.pictureWrap {
-    display: flex;
-    justify-content: flex-start;
-    height: fit-content;
-    width: calc(100% - 2px);
-}
-
-.singlePicture {
-    position: relative;
-    .delete {
+    .icon {
+        padding: 11px 13px;
         cursor: pointer;
-        position: absolute;
-        border: 2px solid white;
-        border-radius: 100%;
-        right: -8px;
-        top: -8px;
-        width: 16px;
-        height: 16px;
-        background-color: black;
-        mat-icon {
-            padding: 0 !important;
-            font-size: 16px;
+        color: #C7C7C7;
+
+        &:hover {
+            color: white;
         }
     }
+
+    .customUpload {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-end;
+        color: #FFFFFF;
+        cursor: pointer;
+    }
+
+    .preview {
+        width: auto;
+        height: 120px;
+        object-fit: contain;
+        border: 1px solid white;
+        border-radius: 4px;
+        margin-left: 15px;
+    }
+
+    .pictureWrap {
+        display: flex;
+        justify-content: flex-start;
+        height: fit-content;
+        width: calc(100% - 2px);
+    }
+
+    .singlePicture {
+        position: relative;
+
+        .delete {
+            cursor: pointer;
+            position: absolute;
+            border: 2px solid white;
+            border-radius: 100%;
+            right: -8px;
+            top: -8px;
+            width: 16px;
+            height: 16px;
+            background-color: black;
+
+            mat-icon {
+                padding: 0 !important;
+                font-size: 16px;
+            }
+        }
+    }
+
 }
 
 input[type="file"] {
@@ -91,3 +95,4 @@ input[type="file"] {
 .changeWidth {
     width: calc(100vw - 224px - 400px);
 }
+
