--- a/src/app/thread/thread.component.scss
+++ b/src/app/thread/thread.component.scss
@@ -57,6 +57,7 @@
         background-color: green;
         width: 100%;
         height: 55vh;
+        overflow-y: scroll;
     }
 
     .chatbox {
