--- a/src/app/channel/channel.component.scss
+++ b/src/app/channel/channel.component.scss
@@ -23,10 +23,9 @@
     }
 
     .messageContainer {
-        height: 67vh;
-        max-height: fit-content;
+        height: calc(100% - 184px);
+        width: calc(100% - 24px);
         overflow-y: scroll;
-        //width: calc(100vw - 224px - 400px);
     }
     
     .chatbox {
