--- a/src/app/thread/thread.component.scss
+++ b/src/app/thread/thread.component.scss
@@ -56,7 +56,7 @@
     .threadAnwsers {
         background-color: green;
         width: 100%;
-        height: 55vh;
+        height: calc(100% - 290px);
         overflow-y: scroll;
     }
 
