--- a/src/quill.smoke.css
+++ b/src/quill.smoke.css
@@ -8,10 +8,10 @@
 /* I just created some new variables to make the icons appear white on a black background */
 /* If you want, edit the colours to change up the look of the icons */
 :root {
-  --stroke-colour: #C7C7C7;
-  --fill-colour: #C7C7C7;
-  --picker-label-colour: #C7C7C7;
-  --editor-placeholder-colour: #C7C7C7;
+  --stroke-colour: rgb(139, 139, 139);
+  --fill-colour: rgb(139, 139, 139);
+  --picker-label-colour: rgb(139, 139, 139);
+  --editor-placeholder-colour: rgb(139, 139, 139);
 }
 
 .ql-container {
@@ -443,7 +443,7 @@
 }
 
 .ql-editor .ql-color-white {
-  color: #C7C7C7;
+  color: rgb(139, 139, 139);
 }
 
 .ql-editor .ql-color-red {
@@ -773,7 +773,7 @@
 }
 
 .ql-snow .ql-editor blockquote {
-  border-left: 4px solid #C7C7C7;
+  border-left: 4px solid rgb(139, 139, 139);
   margin-bottom: 5px;
   margin-top: 5px;
   padding-left: 16px;
@@ -835,7 +835,7 @@
 }
 
 .ql-snow .ql-picker-options {
-  background-color: #C7C7C7;
+  background-color: rgb(139, 139, 139);
   display: none;
   min-width: 100%;
   padding: 4px 8px;
@@ -851,16 +851,16 @@
 }
 
 .ql-snow .ql-picker.ql-expanded .ql-picker-label {
-  color: #C7C7C7;;
+  color: rgb(139, 139, 139);;
   z-index: 2;
 }
 
 .ql-snow .ql-picker.ql-expanded .ql-picker-label .ql-fill {
-  fill: #C7C7C7;;
+  fill: rgb(139, 139, 139);;
 }
 
 .ql-snow .ql-picker.ql-expanded .ql-picker-label .ql-stroke {
-  stroke: #C7C7C7;;
+  stroke: rgb(139, 139, 139);;
 }
 
 .ql-snow .ql-picker.ql-expanded .ql-picker-options {
@@ -1053,7 +1053,7 @@
 }
 
 .ql-snow .ql-color-picker.ql-background .ql-picker-item {
-  background-color: #C7C7C7;
+  background-color: rgb(139, 139, 139);
 }
 
 .ql-snow .ql-color-picker.ql-color .ql-picker-item {
@@ -1063,9 +1063,9 @@
 .ql-toolbar.ql-snow {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
-  border-left: 1px solid #C7C7C7;;
-  border-right: 1px solid #C7C7C7;;
-  border-top: 1px solid #C7C7C7;;
+  border-left: 1px solid  rgb(139, 139, 139);
+  border-right: 1px solid  rgb(139, 139, 139);
+  border-top: 1px solid  rgb(139, 139, 139);
   box-sizing: border-box;
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   padding: 8px;
@@ -1085,11 +1085,11 @@
 }
 
 .ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-label {
-  border-color: #C7C7C7;;
+  border-color: rgb(139, 139, 139);;
 }
 
 .ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-options {
-  border-color: #C7C7C7;;
+  border-color: rgb(139, 139, 139);;
 }
 
 .ql-toolbar.ql-snow .ql-color-picker .ql-picker-item.ql-selected,
@@ -1103,7 +1103,7 @@
 
 .ql-snow .ql-tooltip {
   background-color: #fff;
-  border: 1px solid #C7C7C7;;
+  border: 1px solid rgb(139, 139, 139);;
   box-shadow: 0px 0px 5px #ddd;
   color: #444;
   padding: 5px 12px;
@@ -1118,7 +1118,7 @@
 
 .ql-snow .ql-tooltip input[type=text] {
   display: none;
-  border: 1px solid #C7C7C7;;
+  border: 1px solid rgb(139, 139, 139);;
   font-size: 13px;
   height: 26px;
   margin: 0px;
@@ -1135,7 +1135,7 @@
 }
 
 .ql-snow .ql-tooltip a.ql-action::after {
-  border-right: 1px solid #C7C7C7;;
+  border-right: 1px solid  rgb(139, 139, 139);
   content: 'Edit';
   margin-left: 16px;
   padding-right: 8px;
@@ -1182,6 +1182,6 @@
 }
 
 .ql-container.ql-snow {
-  border-left: 1px solid #C7C7C7;;
-  border-right: 1px solid #C7C7C7;;
+  border-left: 1px solid rgb(139, 139, 139);;
+  border-right: 1px solid rgb(139, 139, 139);;
 }
