try get height of a div

--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -3,8 +3,7 @@
     <div class="channelHeader d-flex sb">
         <h3>{{ channelName }}</h3>
         <div class="d-flex center">
-            <mat-icon (click)="openDialog()">info</mat-icon>
-            <!-- userid in username umwandeln fehlt noch -->
+            <mat-icon (click)="openDialog()">info_outline</mat-icon>
         </div>
     </div>
 
