--- a/src/app/channel/channel.component.scss
+++ b/src/app/channel/channel.component.scss
@@ -17,8 +17,14 @@
         }
 
         mat-icon {
-            color: white;
+            filter: invert(30%);
+            transform: scale(1.3);
             cursor: pointer;
+            transition: 125ms ease-in-out;
+
+            &:hover {
+                filter: invert(0);
+            }
         }
     }
 
