--- a/src/app/dialog-channel-info/dialog-channel-info.component.html
+++ b/src/app/dialog-channel-info/dialog-channel-info.component.html
@@ -23,19 +23,20 @@ and info about channel
             <mat-icon class="close" (click)="onNoClick()">close</mat-icon>
         </div>
         <div class="subHeadlineWrap">
-            <h2>Mitglieder ({{ countMembers }})</h2> <button mat-button color="warn" (click)="deleteUser()">Channel
-                verlassen</button>
+            <h2>Mitglieder ({{ countMembers }})</h2>
         </div>
 
-        <table *ngIf="isUpdated">
-            <tr *ngFor="let user of userList">
+        <div *ngIf="isUpdated">
+            <div *ngFor="let user of userList">
                 <div class="user">
                     <img [src]=" user.photoURL ? user.photoURL : avatar" class="avatar">
                     <span>{{ user.displayName }}</span>
                 </div>
-            </tr>
-        </table>
-        <form class="form">
+            </div>
+        </div>
+        <button mat-button color="warn" (click)="deleteUser()">Channel
+            verlassen</button>
+        <!--  <form class="form">
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>Nutzer hinzufügen:</mat-label>
                 <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
@@ -47,7 +48,7 @@ and info about channel
                 </mat-autocomplete>
             </mat-form-field>
             <button mat-button color="accent" (click)="addUser()">hinzufügen</button>
-        </form>
+        </form>-->
 
 
 
