--- a/src/app/thread/thread.component.scss
+++ b/src/app/thread/thread.component.scss
@@ -11,6 +11,7 @@
 //     margin-bottom: 10px;
 // }
 .threadCont {
+    display: block;
     position: absolute;
     right: 0;
     top: 61px;
@@ -56,7 +57,6 @@
     .threadAnwsers {
         background-color: green;
         width: 100%;
-        height: calc(100% - 290px);
         overflow-y: scroll;
     }
 
