--- a/src/app/thread/thread.component.html
+++ b/src/app/thread/thread.component.html
@@ -9,14 +9,16 @@
 
 
 
-    <div id="firstMessage">
-        <div class="userName"> User {{ threadData['creatorId']}} </div>
-        <div class="text" [innerHTML]="threadData['message']"></div>
-        <p>Antworten:</p>
-    </div>
+    <div class="scroll">
+        <div id="firstMessage">
+            <div class="userName"> User {{ threadData['creatorId']}} </div>
+            <div class="text" [innerHTML]="threadData['message']"></div>
+            <p>Antworten:</p>
+        </div>
 
-    <div class="threadAnwsers" id="threadAnwsers">
-        <app-thread-anwser-card *ngFor="let anwser of anwsers" anwser="{{ anwser }}"></app-thread-anwser-card>
+        <div class="threadAnwsers" id="threadAnwsers">
+            <app-thread-anwser-card *ngFor="let anwser of anwsers" anwser="{{ anwser }}"></app-thread-anwser-card>
+        </div>
     </div>
 
     <app-chatbox class="chatbox" [class.changeWidthChatbox]="messageService.thread"></app-chatbox>
