--- a/src/app/thread/thread.component.scss
+++ b/src/app/thread/thread.component.scss
@@ -21,30 +21,33 @@
             display: flex;
             align-items: center;
             justify-content: center;
+
             mat-icon {
                 transform: rotate(45deg);
             }
         }
     }
 
-    .userName {
-        margin-top: 16px;
-        font-weight: bold;
-    }
-
-    .text {
-        border-bottom: 1px solid rgb(139, 139, 139);
-    }
-
-    p {
-        margin-top: 4px;
-        color:  rgb(139, 139, 139);
-    }
-
-    .threadAnwsers {
-        background-color: green;
-        width: 100%;
+    .scroll {
         overflow-y: scroll;
+
+        .userName {
+            margin-top: 16px;
+            font-weight: bold;
+        }
+
+        .text {
+            border-bottom: 1px solid rgb(139, 139, 139);
+        }
+
+        p {
+            margin-top: 4px;
+            color: rgb(139, 139, 139);
+        }
+
+        .threadAnwsers {
+            width: 100%;
+        }
     }
 
     .chatbox {
