--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -14,10 +14,12 @@ André
 
 
 <mat-card class="mat-elevation-z0 outline">
-
-    <quill-editor *ngIf="cleared" placeholder="Nachricht" [modules]="modules" (onEditorChanged)="changedEditor($event)">
-    </quill-editor>
-
+    <div [formGroup]="form">
+        <quill-editor *ngIf="cleared" placeholder="Nachricht" [modules]="modules"
+            (onEditorChanged)="changedEditor($event)" formControlName="text" (onBlur)="blur()"
+            (onSelectionChanged)="onSelectionChanged()">
+        </quill-editor>
+    </div>
     <div class="pictureWrap" *ngIf="preview">
         <div class="singlePicture">
             <div class="delete">
