--- a/src/app/message-card/message-card.component.html
+++ b/src/app/message-card/message-card.component.html
@@ -5,11 +5,9 @@
     <div>
         <div class="userName">UserName</div>
 
-        <div class="message">
-            <div class="text" [innerHTML]="messageText"></div>
-        </div>
+        <div class="text" [innerHTML]="messageText"></div>
 
-        <p class="threads" (click)="toggleThread()">Antworten</p>
+        <p (click)="toggleThread()">Antworten</p>
     </div>
 
 </mat-card>
