css channel-list-comp

--- a/src/app/channel-list/channel-list.component.html
+++ b/src/app/channel-list/channel-list.component.html
@@ -11,7 +11,7 @@
         <p 
             class="channelButton cursorPointer" 
             *ngFor="let channel of filteredForUser"
-            (click)="changeSelectedId(channel.channelId)">#
+            (click)="changeSelectedId(channel.channelId)">#&nbsp;
             {{ channel.channelName }}
         </p>
     </div>
