--- a/src/app/channel-list/channel-list.component.scss
+++ b/src/app/channel-list/channel-list.component.scss
@@ -21,6 +21,11 @@
         margin-top: 16px;
         max-height: 38vh;
         overflow-y: scroll;
+
+        p {
+            font-size: 16px;
+            margin-bottom: 8px !important;
+        }
     }
 
     .channelButton {
