--- a/src/app/message-card/message-card.component.html
+++ b/src/app/message-card/message-card.component.html
@@ -1,12 +1,10 @@
-<mat-card [class.changeWidth]="messageService.thread" class="d-flex mat-elevation-z0" *ngFor="let channel of filteredForUser">
+<mat-card [class.changeWidth]="messageService.thread" class="d-flex mat-elevation-z0">
 
-    <img class="messageCardImg" *ngFor="let user of channel.users" [src]="user.photoURL"> 
+    <img class="messageCardImg"> 
 
     <div>
-        <div class="userName" *ngFor="let user of channel.users">{{ user.displayName }}</div>
-
+        <div class="userName">UserName</div>
         <div class="text" [innerHTML]="messageText"></div>
-
         <p (click)="toggleThread()">Antworten</p>
     </div>
 
