--- a/src/app/message-card/message-card.component.html
+++ b/src/app/message-card/message-card.component.html
@@ -1,9 +1,9 @@
 <mat-card [class.changeWidth]="messageService.thread" class="d-flex mat-elevation-z0">
 
-    <img class="messageCardImg"> 
+    <img class="messageCardImg"  [src]="creator.photoURL"> 
 
     <div>
-        <div class="userName">UserName</div>
+        <div class="userName">{{ creator.displayName }}</div>
         <div class="text" [innerHTML]="messageText"></div>
         <p (click)="toggleThread()">Antworten</p>
     </div>
