--- a/src/app/thread-anwser-card/thread-anwser-card.component.scss
+++ b/src/app/thread-anwser-card/thread-anwser-card.component.scss
@@ -1,21 +1,35 @@
 mat-card {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    background-color: rgb(34, 37, 41);
+    width: calc(100% - 16px);
+    padding: 8px;
+    margin-top: 8px;
+    background-color: transparent;
+    border: 0px solid;
+
+    &:hover {
+        background-color: rgb(34, 37, 41);
+    }
     
     .messageCardImg {
-        margin-right: 8px;
+        margin-right: 12px;
         height: 36px;
         width: 36px;
+        cursor: pointer;
     }
 
     .userName {
-        font-weight: bold;
+        font-size: 16px;
+        font-weight: 500;
+        margin-bottom: 4px;
+        cursor: pointer;
+    }
+
+    .text {
+        margin-bottom: 4px;
     }
 
     p {
         margin: 0;
         color: rgb(30, 155, 209);
+        cursor: pointer;
     }
 }
