--- a/src/app/thread/thread.component.html
+++ b/src/app/thread/thread.component.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="threadAnwsers" id="threadAnwsers">
-            <app-thread-anwser-card *ngFor="let anwser of anwsers" anwser="{{ anwser }}"></app-thread-anwser-card>
+            <app-thread-anwser-card *ngFor="let anwser of anwsers" anwser="{{ anwser }}" creatorId="{{ creatorId }}"></app-thread-anwser-card>
         </div>
     </div>
 
