--- a/src/app/thread/thread.component.html
+++ b/src/app/thread/thread.component.html
@@ -9,7 +9,7 @@
 
 
 
-    <div class="scroll">
+    <div class="scroll" id="answerContainer">
         <div id="firstMessage">
             <div class="userName"> User {{ threadData['creatorId']}} </div>
             <div class="text" [innerHTML]="threadData['message']"></div>
