--- a/src/app/thread-anwser-card/thread-anwser-card.component.html
+++ b/src/app/thread-anwser-card/thread-anwser-card.component.html
@@ -1,29 +1,4 @@
-<!-- <mat-card>
-    <div class="user">UserName/Profilbild</div>
-    <div class="message">
-        <div class="text" [innerHTML]="anwser"></div>
-        <div class="edit">
-        </div>
-    </div>
-</mat-card> -->
-
-
-<!-- <mat-card class="d-flex mat-elevation-z0">
-
-    <img class="messageCardImg" src="assets/avatar.png">
-
-    <div>
-        <div class="userName">UserName</div>
-
-        <div class="message">
-            <div class="text" [innerHTML]="anwser"></div>
-        </div>
-
-    </div>
-
-</mat-card> -->
-
-<mat-card class="d-flex mat-elevation-z0">
+<mat-card class="d-flex mat-elevation-z0 borderBottom">
 
     <img class="messageCardImg" [src]="creator.photoURL"> 
 
