--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -1,7 +1,7 @@
 <div class="channelCont" [class.changeWidth]="messageService.thread">
 
     <div class="channelHeader d-flex sb">
-        <h3>{{ channelName }}</h3>
+        <h3><b># {{ channelName }}</b></h3>
         <div class="d-flex center">
             <mat-icon (click)="openDialog()">info_outline</mat-icon>
         </div>
