--- a/src/app/message-card/message-card.component.html
+++ b/src/app/message-card/message-card.component.html
@@ -1,4 +1,4 @@
-<mat-card [class.changeWidth]="messageService.thread" class="d-flex mat-elevation-z0">
+<mat-card [class.changeWidth]="messageService.thread" class="d-flex mat-elevation-z0 borderBottom">
 
     <img class="messageCardImg" [src]="creator.photoURL"> 
 
