--- a/src/app/message-card/message-card.component.scss
+++ b/src/app/message-card/message-card.component.scss
@@ -1,7 +1,8 @@
 mat-card {
-    width: calc(100% - 16px);
-    padding: 8px;
-    margin-top: 8px;
+    width: calc(100% - 24px);
+    padding: 0;
+    padding-top: 12px;
+    padding-bottom: 12px;
     background-color: transparent;
     border: 0px solid;
 
