--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,3 +58,7 @@ p {
 span {
     font-weight: 300 !important;
 }
+
+.borderBottom {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.05) !important;
+}
