--- a/src/app/dialog-create-new-message/dialog-create-new-message.component.scss
+++ b/src/app/dialog-create-new-message/dialog-create-new-message.component.scss
@@ -38,6 +38,13 @@ mat-form-field {
 
 form {
     display: flex;
+    margin-top: 16px;
+    width: 100%;
+
+    .addButton {
+        padding: 8px;
+        width: 100%;
+    }
 }
 
 mat-card {
@@ -48,10 +55,12 @@ mat-card {
     display: flex;
     flex-direction: row;
     gap: 16px;
+    margin-bottom: 16px;
 }
 
 .avatar {
     width: 24px;
     height: 24px;
+    object-fit: contain;
     border-radius: 2px;
 }
