--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -9,13 +9,13 @@
 
     <div class="members cursorPointer" *ngFor="let channel of filteredForUser"
         (click)="changeSelectedId(channel.channelId)">
-        <span *ngFor="let user of channel.users">
-            <img class="userPic" [src]="user.photoURL"> 
-            {{ user.displayName }}
-            <span *ngIf="channel.users.length > 1 && user != channel.users[channel.users.length - 1]">
+        <div class ="wrap" *ngFor="let user of channel.users">
+            <img class="userPic" [src]="user.photoURL">
+            <p>{{ user.displayName }}</p>
+            <p *ngIf="channel.users.length > 1 && user != channel.users[channel.users.length - 1]">
                 ,&nbsp;
-            </span>
-        </span>
+            </p>
+        </div>
     </div>
 
 </div>
