--- a/src/app/members/members.component.scss
+++ b/src/app/members/members.component.scss
@@ -24,7 +24,18 @@
 
         .userPic {
             height: 24px;
+            width: 24px;
             margin-right: 8px;
         }
     }
+
+    .wrap {
+        display: flex;
+        align-items: baseline;
+
+        p {
+            font-size: 16px !important;
+        }
+    }
+
 }
