--- a/src/app/channel/channel.component.scss
+++ b/src/app/channel/channel.component.scss
@@ -14,8 +14,8 @@
         border-bottom: 1px solid rgb(139, 139, 139);
 
         p {
-            margin-top: 3px;
-            margin-right: 16px;
+            // margin-top: 3px;
+            // margin-right: 16px;
         }
 
         mat-icon {
