--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,3 +53,9 @@ body {
 .borderBottom {
     border-bottom: 1px solid rgba(255, 255, 255, 0.05) !important;
 }
+
+.mat-typography {
+    p {
+        margin: 0;
+    }
+}
