--- a/src/app/message-card/message-card.component.scss
+++ b/src/app/message-card/message-card.component.scss
@@ -20,14 +20,12 @@ mat-card {
     .userName {
         font-size: 16px;
         font-weight: 500;
-        margin-bottom: 4px;
+        margin-bottom: 8px;
         cursor: pointer;
     }
 
-
-
     p {
-        margin-bottom: 0;
+        margin-top: 8px;
         color: rgb(30, 155, 209);
         cursor: pointer;
     }
