--- a/src/app/thread/thread.component.scss
+++ b/src/app/thread/thread.component.scss
@@ -59,3 +59,11 @@
 .changeWidthChatbox {
     width: calc(100% - 24px);
 }
+
+@media (max-width: 1100px) {
+
+    .threadCont {
+        width: 300px;
+    }
+
+}
