--- a/src/quill.smoke.css
+++ b/src/quill.smoke.css
@@ -1185,3 +1185,13 @@
   border-left: 1px solid rgb(139, 139, 139);;
   border-right: 1px solid rgb(139, 139, 139);;
 }
+
+
+
+@media (max-width: 1100px) {
+
+  .ql-toolbar.ql-snow .ql-formats {
+    margin-right: 6px;
+  }
+
+}
