--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import './quill.smoke.css';
 
+
+
+@import '~@angular/material/theming';
+$custom-typography: mat-typography-config($font-family: 'Raleway'
+    );
+@include mat-core($custom-typography);
+
+
 html,
 body {
     height: 100%;
