dialogs are responsive

--- a/src/app/dialog-create-new-message/dialog-create-new-message.component.html
+++ b/src/app/dialog-create-new-message/dialog-create-new-message.component.html
@@ -11,7 +11,7 @@
 
         <div class="subheadWrap">
 
-            <form class="example-form">
+            <form class="form">
                 <mat-form-field class="example-full-width" appearance="fill">
                     <mat-label>Nutzer hinzufügen:</mat-label>
                     <input type="text" id="formControl" matInput [formControl]="myControl2" [matAutocomplete]="auto">
