--- a/src/app/thread/thread.component.html
+++ b/src/app/thread/thread.component.html
@@ -21,6 +21,6 @@
         </div>
     </div>
 
-    <app-chatbox class="chatbox" [class.changeWidthChatbox]="messageService.thread"></app-chatbox>
+    <app-chatbox class="chatbox"></app-chatbox>
 
 </div>
