--- a/src/app/left-side/left-side.component.html
+++ b/src/app/left-side/left-side.component.html
@@ -1,23 +1,21 @@
 <div [class.d-none]="!menuBtn">
 
     <div class="menuBtn">
-        <button class="btn" type="button" mat-button (click)="drawer.toggle()">
+        <button class="btn" type="button" mat-button (click)="drawer.toggle(); addClass()">
             <mat-icon>menu</mat-icon>
         </button>
     </div>
 
-    <mat-drawer-container>
+    <mat-drawer-container id="matDrawerCont" [class.menuOpen]="menuOpen">
         <mat-drawer #drawer mode="side">
             <app-channel-list></app-channel-list>
             <app-members></app-members>
         </mat-drawer>
     </mat-drawer-container>
 
-
 </div>
 
 <div class="leftSideCont" [class.d-none]="menuBtn">
-
 
     <div class="leftSide">
         <app-channel-list></app-channel-list>
