--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,6 +1,6 @@
 <div class="membersCont">
 
-    <div class="d-flex sb">
+    <div class="header d-flex sb">
         <h3>Direktnachrichten</h3>
         <button (click)="openDialog()" mat-fab color="basic">
             <mat-icon>add</mat-icon>
