--- a/src/app/message-card/message-card.component.html
+++ b/src/app/message-card/message-card.component.html
@@ -5,7 +5,7 @@
     <div>
         <div class="userName">{{ creator.displayName }}</div>
         <div class="text" [innerHTML]="messageText"></div>
-        <p (click)="toggleThread()">{{ anwsers.length }} Antworten</p>
+        <p (click)="toggleThread()">{{ counter }} Antworten</p>
     </div>
 
 </mat-card>
