--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,21 +3,21 @@
 
 
 
-@import '~@angular/material/theming';
-$custom-typography: mat-typography-config($font-family: 'Raleway'
-    );
-@include mat-core($custom-typography);
+// @import '~@angular/material/theming';
+// $custom-typography: mat-typography-config($font-family: 'Raleway'
+//     );
+// @include mat-core($custom-typography);
 
 
 html,
 body {
     height: 100%;
+    margin: 0;
+    // font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
+
 }
 
-body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-}
 
 ::-webkit-scrollbar {
     width: 0px !important;
