change font + color

--- a/src/app/chatbox/chatbox.component.scss
+++ b/src/app/chatbox/chatbox.component.scss
@@ -36,7 +36,7 @@ mat-card {
         color: rgb(139, 139, 139);
 
         &:hover {
-            color: white;
+            color: whitesmoke;
         }
     }
 
