--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@ body {
     margin: 0;
     // font-family: 'Roboto', sans-serif;
     font-family: 'Poppins', sans-serif;
-
+    color: whitesmoke !important;
 }
 
 
