--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,6 +75,6 @@ body {
 @media (max-width: 430px) {
 
     .cdk-overlay-pane {
-        max-width: 100vw !important;
+        max-width: 100% !important;
     }
 }
