--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,10 +3,9 @@
 
 
 
-// @import '~@angular/material/theming';
-// $custom-typography: mat-typography-config($font-family: 'Raleway'
-//     );
-// @include mat-core($custom-typography);
+@import '~@angular/material/theming';
+$custom-typography: mat-typography-config($font-family: "'Poppins', sans-serif");
+@include mat-core($custom-typography);
 
 
 html,
@@ -16,6 +15,7 @@ body {
     // font-family: 'Roboto', sans-serif;
     font-family: 'Poppins', sans-serif;
     color: whitesmoke !important;
+
 }
 
 
