--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,9 @@
 @import './quill.smoke.css';
 
 
-
-//@import '~@angular/material/theming';
-//$custom-typography: mat-typography-config($font-family: "'Poppins', sans-serif");
-//@include mat-core($custom-typography);
+@import '~@angular/material/theming';
+$custom-typography: mat-typography-config($font-family: "'Poppins', sans-serif");
+@include mat-core($custom-typography);
 
 
 html,
@@ -13,7 +12,7 @@ body {
     height: 100%;
     margin: 0;
     // font-family: 'Roboto', sans-serif;
-    font-family: 'Poppins', sans-serif !important;
+    //font-family: 'Poppins', sans-serif !important;
     color: whitesmoke !important;
 
 }
