--- a/src/app/message-card/message-card.component.scss
+++ b/src/app/message-card/message-card.component.scss
@@ -30,8 +30,10 @@ mat-card {
         cursor: pointer;
     }
 
-
-
+    .text {
+        word-break: break-all;
+        word-wrap: break-word;
+    }
 
 }
 
