--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,8 @@ body {
     // font-family: 'Roboto', sans-serif;
     //font-family: 'Poppins', sans-serif !important;
     color: whitesmoke !important;
-
+    word-break: break-all;
+    word-wrap: break-word;
 }
 
 
