--- a/src/app/message-card/message-card.component.scss
+++ b/src/app/message-card/message-card.component.scss
@@ -5,6 +5,7 @@ mat-card {
     padding-bottom: 12px;
     background-color: transparent;
     border: 0px solid;
+    color: #e8e6e3 !important;
 
     &:hover {
         background-color: rgb(34, 37, 41);
