--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 
 
 @import '~@angular/material/theming';
-$custom-typography: mat-typography-config($font-family: "'Poppins', sans-serif");
+$custom-typography: mat-typography-config($font-family: "'Roboto', sans-serif");
 @include mat-core($custom-typography);
 
 
@@ -11,9 +11,7 @@ html,
 body {
     height: 100%;
     margin: 0;
-    // font-family: 'Roboto', sans-serif;
-    //font-family: 'Poppins', sans-serif !important;
-    color: whitesmoke !important;
+    color: #e8e6e3 !important;
     word-break: break-all;
     word-wrap: break-word;
 }
