--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ body {
     height: 100%;
     margin: 0;
     color: #e8e6e3 !important;
+    font-weight: 100;
     word-break: break-all;
     word-wrap: break-word;
 }
