--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -15,8 +15,7 @@
           let i = index"
           messageText="{{message}}" 
           threadData="{{threadAnwsersToJson(i)}}"
-          counter="{{ this.threadMessages[i].length}}"
-          >
+          counter="{{ this.threadMessages[i].length}}">
         </app-message-card>
 
         <app-chatbox 
