--- a/src/app/message-card/message-card.component.html
+++ b/src/app/message-card/message-card.component.html
@@ -1,10 +1,11 @@
 <mat-card [class.changeWidth]="messageService.thread" class="d-flex mat-elevation-z0 borderBottom">
 
-    <img class="messageCardImg" [src]="creator.photoURL"> 
+    <img class="messageCardImg" [src]="creator.photoURL">
 
     <div>
         <div class="userName">{{ creator.displayName }}</div>
-        <div class="text" [innerHTML]="messageText"></div>
+        <div *ngIf="messageText" class="text" [innerHTML]="messageText"></div>
+        <img *ngIf="picture" class="preview" (click)="openDialog(picture)" [src]="picture">
         <p (click)="toggleThread()">{{ counter }} Antworten {{ timestamp | date:'hh:mm' }}</p>
     </div>
 
