--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -1,30 +1,24 @@
 <div class="channelCont" [class.changeWidthB]="messageService.threadB" [class.changeWidthS]="messageService.threadS">
 
-    <div class="channelHeader d-flex sb">
-        <h3><b># {{ channelName }}</b></h3>
-        <div class="d-flex center">
-            <mat-icon (click)="openDialog()">info_outline</mat-icon>
-        </div>
+  <div class="channelHeader d-flex sb">
+    <h3><b># {{ channelName }}</b></h3>
+    <div class="d-flex center">
+      <mat-icon (click)="openDialog()">info_outline</mat-icon>
     </div>
+  </div>
 
-    <div class="messageContainer" id="messageContainer">
+  <div class="messageContainer" id="messageContainer">
 
-        <app-message-card 
-          class="message" 
-          *ngFor="let message of messages, 
-          let i = index"
-          messageText="{{message}}" 
-          threadData="{{threadAnwsersToJson(i)}}"
-          counter="{{ this.threadMessages[i].length}}">
-        </app-message-card>
+    <app-message-card class="message" *ngFor="let message of messages, 
+          let i = index" messageText="{{message['message']}}" picture="{{message['picture']}}"
+      threadData="{{threadAnwsersToJson(i)}}" counter="{{ this.threadMessages[i].length}}">
+    </app-message-card>
 
-        <app-chatbox 
-          class="chatbox" 
-          [class.changeWidthChatboxB]="messageService.threadB" 
-          [class.changeWidthChatboxS]="messageService.threadS">
-        </app-chatbox>
+    <app-chatbox class="chatbox" [class.changeWidthChatboxB]="messageService.threadB"
+      [class.changeWidthChatboxS]="messageService.threadS">
+    </app-chatbox>
 
-    </div>
+  </div>
 
 </div>
 
