--- a/src/app/message-card/message-card.component.scss
+++ b/src/app/message-card/message-card.component.scss
@@ -31,6 +31,12 @@ mat-card {
         cursor: pointer;
     }
 
+    .preview{
+       width:auto;
+       height: 100px;
+       object-fit: contain;
+       cursor: pointer;
+    }
 }
 
 .changeWidth {
