uploaded picture shows in correct chatbox

--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -15,7 +15,7 @@
     </app-message-card>
 
     <app-chatbox class="chatbox" [class.changeWidthChatboxB]="messageService.threadB"
-      [class.changeWidthChatboxS]="messageService.threadS">
+      [class.changeWidthChatboxS]="messageService.threadS" parent="channel">
     </app-chatbox>
 
   </div>
