--- a/src/app/thread-anwser-card/thread-anwser-card.component.scss
+++ b/src/app/thread-anwser-card/thread-anwser-card.component.scss
@@ -8,7 +8,7 @@ mat-card {
     &:hover {
         background-color: rgb(34, 37, 41);
     }
-    
+
     .messageCardImg {
         margin-right: 12px;
         height: 36px;
@@ -30,6 +30,13 @@ mat-card {
     p {
         margin: 0;
         color: rgb(30, 155, 209);
+        cursor: pointer;
+    }
+
+    .preview {
+        width: auto;
+        height: 100px;
+        object-fit: contain;
         cursor: pointer;
     }
 }
